# Clio

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  main.py  pyproject.toml
clio/: __main__.py  app.py  codepage.py  palette.py  render.py  scene.py
clio/scenes/: title.py  world_map.py
clio/world/: __init__.py  generate.py  generate_random.py  generate_simplex.py  grid.py  random.py  simplex.py  terrain.py
docs/: clio-initial-design.md
src/clio/: __init__.py  __main__.py  app.py
tests/: test_palette.py  test_scene.py
tests/world/: test_generators.py  test_terrain.py
