[project]
name = "clio"
version = "0.0.1"
description = "A civilization simulator"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Brandon Stansbury", email = "brandonrstansbury@gmail.com"},
]
dependencies = [
    "numpy>=2.4.6",
    "opensimplex>=0.4.5.1",
    "pygame-ce>=2.5.7",
]

[project.urls]
Repository = "https://github.com/drmonkeysee/Clio"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
